# Render filter chain

add_library(goggles_render_chain_obj OBJECT
    output_pass.cpp
    preset_parser.cpp
    filter_pass.cpp
    framebuffer.cpp
    chain_runtime.cpp
    chain_builder.cpp
    chain_resources.cpp
    chain_executor.cpp
    chain_controls.cpp
    api/c/goggles_filter_chain.cpp
    api/cpp/goggles_filter_chain.cpp
    filter_controls.cpp
    frame_history.cpp
    downsample_pass.cpp
    vulkan_dispatch.cpp
)

target_include_directories(goggles_render_chain_obj PUBLIC
    ${CMAKE_SOURCE_DIR}/src/render/chain/api/c
    ${CMAKE_SOURCE_DIR}/src/render/chain/api/cpp
    ${CMAKE_SOURCE_DIR}/src
    ${CMAKE_CURRENT_SOURCE_DIR}/..
)

target_compile_definitions(goggles_render_chain_obj PRIVATE
    GOGGLES_LOG_TAG="render.chain"
)

target_link_libraries(goggles_render_chain_obj PUBLIC
    goggles_util
    Vulkan::Vulkan
    slang::slang
    stb_image
)

target_compile_definitions(goggles_render_chain_obj PUBLIC
    VULKAN_HPP_NO_EXCEPTIONS
    VULKAN_HPP_DISPATCH_LOADER_DYNAMIC=1
)

goggles_enable_clang_tidy(goggles_render_chain_obj)
goggles_enable_sanitizers(goggles_render_chain_obj)
goggles_enable_profiling(goggles_render_chain_obj)
